--- a/Portfolio Site/dev/scss/base/_base.scss
+++ b/Portfolio Site/dev/scss/base/_base.scss
@@ -14,3 +14,15 @@ ul{
     }
 }
 
+.grid-container{
+    display: grid;
+    grid-template-columns: 5vw auto 5vw;
+    grid-template-areas: ". container .";
+    @include xl{
+        grid-template-columns: auto 1440px auto;
+    }
+    >div{
+        grid-area: container;
+    }
+}
+
