--- a/Portfolio Site/dev/scss/helpers/_variables.scss
+++ b/Portfolio Site/dev/scss/helpers/_variables.scss
@@ -10,11 +10,17 @@ $screen-sm-min: 576px;
 $screen-md-min: 768px;
 
 // Large tablets and small desktops
-$screen-lg-min: 992px;
+$screen-lg-min: 1025px;
 
 // Large desktops
-$screen-xl-min: 1200px;
+$screen-xl-min: 14400px;
 
 // Colors
 $white: #fff;
 $black: #000;
+$darkblue: #017494;
+$lightblue: #9CEAFF;
+$pink: #FF6164;
+$purple: #511038;
+$medgrey: #6F6F6F;
+$lightgrey: #D8D8D8;
