--- a/Portfolio Site/dev/scss/layout/_header.scss
+++ b/Portfolio Site/dev/scss/layout/_header.scss
@@ -1,3 +1,31 @@
 /* =============
     Header
 ============= */
+header{
+    div{
+        background-color: $lightgrey;
+        height: 10vh;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        #logo-container{
+            display: flex;
+            align-items: center;
+            padding-left: 3vw;
+            img{
+                @include md{
+                    height: 6vh;
+                }
+            }
+        }
+        #burger-container{
+            font-size: rem-calc(25);
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            padding-right: 3vw;    
+            @include md{
+                font-size: rem-calc(30);
+            }    
+        }
+    }
+}
