--- a/Portfolio Site/dev/scss/helpers/_variables.scss
+++ b/Portfolio Site/dev/scss/helpers/_variables.scss
@@ -22,5 +22,5 @@ $darkblue: #017494;
 $lightblue: #9CEAFF;
 $pink: #FF6164;
 $purple: #511038;
-$medgrey: #6F6F6F;
+$medgrey: #434343;
 $lightgrey: #D8D8D8;
