--- a/Portfolio Site/dev/scss/base/_base.scss
+++ b/Portfolio Site/dev/scss/base/_base.scss
@@ -25,4 +25,13 @@ ul{
         grid-area: container;
     }
 }
+.content-spacing{
+    padding: 80px 0;
+    @include md{
+        padding: 120px 0;
+    }
+    @include xl{
+        padding: 200px 0;
+    }
+}
 
