--- a/Portfolio Site/deploy/css/styles.css
+++ b/Portfolio Site/deploy/css/styles.css
@@ -396,27 +396,98 @@ ul li {
 /* =============
     Typography
 ============= */
-body {
-  font-family: "Montserrat", sans-serif;
+h1 {
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+@media (min-width: 768px) {
+  h1 {
+    font-size: 1.5625rem;
+  }
+}
+@media (min-width: 14400px) {
+  h1 {
+    font-size: 2.5rem;
+  }
 }
 
-h1, h2, h3, h4 {
-  margin: 0;
-  padding: 0;
+h2 {
+  font-family: "Hepta Slab", serif;
+  font-size: 2.5rem;
+  font-weight: 400;
+  line-height: 3.1875rem;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  h2 {
+    font-size: 3.75rem;
+    line-height: 4.6875rem;
+  }
+}
+@media (min-width: 14400px) {
+  h2 {
+    font-size: 6.25rem;
+    line-height: 7.8125rem;
+    text-align: right;
+  }
+}
+
+h3 {
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.0625rem;
+  font-weight: 400;
+}
+@media (min-width: 768px) {
+  h3 {
+    font-size: 1.25rem;
+  }
+}
+@media (min-width: 14400px) {
+  h3 {
+    font-size: 1.875rem;
+  }
 }
 
 p {
+  font-family: "Quicksand", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.8125rem;
   margin: 0;
   padding: 0;
 }
-
-.section-title {
-  font-weight: 300;
+@media (min-width: 768px) {
+  p {
+    font-size: 1.25rem;
+    line-height: 2.5rem;
+  }
+}
+@media (min-width: 14400px) {
+  p {
+    font-size: 1.5625rem;
+    line-height: 2.8125rem;
+  }
 }
 
 /* =============
     Buttons
 ============= */
+button {
+  padding: 15px 0;
+  margin: 2vw;
+  width: 50vw;
+  max-width: 250px;
+  border-radius: 5;
+  background-color: #9CEAFF;
+  border-color: #9CEAFF;
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.0625rem;
+  font-weight: 400;
+  line-height: 1.4375rem;
+  color: #000;
+}
+
 /* =============
     Forms
 ============= */
@@ -438,19 +509,111 @@ textarea {
 /* =============
     Navigation
 ============= */
+#nav-container ul {
+  height: 100%;
+  text-align: right;
+}
+@media (min-width: 1025px) {
+  #nav-container ul {
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+#nav-container ul li {
+  border-bottom: 1px solid #000;
+}
+@media (min-width: 14400px) {
+  #nav-container ul li {
+    align-items: center;
+    border-bottom: none;
+    display: flex;
+    margin: 0px 30px 0 0;
+  }
+}
+#nav-container ul li a:link,
+#nav-container ul li a:visited {
+  color: #434343;
+  display: inline-block;
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.5625rem;
+  font-weight: 300;
+  padding: 20px 0;
+  text-align: center;
+  text-decoration: none;
+  transition: 0.25s;
+  width: 100%;
+}
+#nav-container ul li a:hover {
+  color: #9CEAFF;
+}
+#nav-container ul li a:active {
+  color: #017494;
+}
+#nav-container ul li li:last-child {
+  border: none;
+}
+
 /* =============
     Header
 ============= */
 header div {
   background-color: #D8D8D8;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas: "logo name burger" "nav nav nav";
+  grid-template-columns: repeat(3, 1fr);
   height: 10vh;
+  padding-top: 2vh;
+}
+@media (min-width: 14400px) {
+  header div {
+    grid-template-areas: "logo name nav nav";
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+header div #name p {
+  color: #000;
+  font-size: 1rem;
+  font-weight: 500;
+  grid-area: name;
+  line-height: 1.25rem;
+  padding-left: 5%;
+  padding-top: 1vh;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  header div #name p {
+    font-size: 1.5625rem;
+    padding-top: 2vh;
+  }
+}
+@media (min-width: 14400px) {
+  header div #name p {
+    font-size: 1.5625rem;
+    padding-left: 10%;
+    text-align: left;
+  }
 }
 header div #logo-container {
   align-items: center;
   display: flex;
+  grid-area: logo;
   padding-left: 3vw;
+}
+@media (min-width: 768px) {
+  header div #logo-container {
+    height: 70px;
+    width: 70px;
+  }
+}
+@media (min-width: 14400px) {
+  header div #logo-container {
+    height: 80px;
+    padding: 25%;
+    width: 80px;
+  }
+}
+header div #logo-container img {
+  height: 5vh;
 }
 @media (min-width: 768px) {
   header div #logo-container img {
@@ -461,12 +624,49 @@ header div #burger-container {
   align-items: center;
   display: flex;
   font-size: 1.5625rem;
+  grid-area: burger;
   justify-content: flex-end;
   padding-right: 3vw;
 }
 @media (min-width: 768px) {
   header div #burger-container {
     font-size: 1.875rem;
+  }
+}
+@media (min-width: 14400px) {
+  header div #burger-container {
+    visibility: collapse !important;
+  }
+}
+header div #burger-container i {
+  color: #000;
+  cursor: pointer;
+}
+header div #nav-container {
+  background-color: #D8D8D8;
+  display: none;
+  grid-area: nav;
+  padding: 0 20px;
+}
+@media (min-width: 14400px) {
+  header div #nav-container {
+    background-color: #D8D8D8;
+    display: block !important;
+    padding: 0 5vw;
+    width: 90vw;
+  }
+}
+header #header-triangle {
+  background-color: transparent;
+  border-color: #D8D8D8 transparent transparent transparent;
+  border-style: solid;
+  border-width: 7vh 100vw 0 0;
+  height: 0;
+  width: 0;
+}
+@media (min-width: 768px) {
+  header #header-triangle {
+    border-width: 10vh 100vw 0 0;
   }
 }
 
@@ -476,25 +676,62 @@ header div #burger-container {
 div {
   background-color: #434343;
   height: 10vh;
+  padding-bottom: 1vh;
 }
 
 ul {
   color: white;
   display: grid;
-  grid-template-columns: repeat(5, 20vw);
-}
-@media (min-width: 768px) {
-  ul {
-    grid-template-columns: 26vw 14vw 14vw 14vw 14vw;
-  }
+  grid-template-columns: repeat(4, 1fr);
+  max-width: 80vw;
+  padding: 0 10vw;
 }
 
 li {
   display: flex;
+  align-content: center;
+  justify-content: center;
   padding-top: 5vh;
 }
 @media (min-width: 768px) {
   li {
     font-size: 1.875rem;
+  }
+}
+
+#footer-triangle {
+  border-color: white transparent transparent transparent;
+  border-style: solid;
+  border-width: 7vh 100vw 0 0;
+  height: 0;
+  width: 0;
+  padding-bottom: 10vh;
+}
+@media (min-width: 768px) {
+  #footer-triangle {
+    border-width: 10vh 100vw 0 0;
+    padding-bottom: 10vh;
+  }
+}
+#footer-triangle img {
+  height: 5vh;
+  padding-left: 84vw;
+}
+@media (min-width: 768px) {
+  #footer-triangle img {
+    height: 7vh;
+    padding-left: 8vw;
+  }
+}
+
+/* =============
+    Insta Content
+============= */
+#instagram {
+  padding-left: 1vw;
+}
+@media (min-width: 768px) {
+  #instagram {
+    padding-left: 30vw;
   }
 }
