--- a/Portfolio Site/dev/scss/layout/_footer.scss
+++ b/Portfolio Site/dev/scss/layout/_footer.scss
@@ -2,25 +2,45 @@
     Footer
 ============= */
 div {
-    background-color: $medgrey;
+	background-color: $medgrey;
     height: 10vh;
+    padding-bottom: 1vh;
 }
-
 ul {
-    color: white;
-    display: grid;
-    grid-template-columns: repeat(5, 20vw);
-
-    @include md {
-        grid-template-columns: 26vw 14vw 14vw 14vw 14vw;
-    }
+	color: white;
+	display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    max-width: 80vw;
+    padding: 0 10vw;
 }
-
 li {
     display: flex;
-    padding-top: 5vh;
+    align-content: center;
+    justify-content: center;
+	padding-top: 5vh;
+	@include md {
+		font-size: rem-calc(30);
+	}
+}
+#footer-triangle {
+	border-color: white transparent transparent transparent;
+	border-style: solid;
+	border-width: 7vh 100vw 0 0;
+	height: 0;
+    width: 0;
+    padding-bottom: 10vh;
+    @include md{
+        border-width: 10vh 100vw 0 0;
+        padding-bottom: 10vh;
 
-    @include md {
-        font-size: rem-calc(30);
     }
+    img{
+        height: 5vh;
+        padding-left: 84vw;
+        @include md {
+            height: 7vh;
+            padding-left: 8vw;
+
+        }
+}
 }
