--- a/Portfolio Site/dev/scss/base/_base.scss
+++ b/Portfolio Site/dev/scss/base/_base.scss
@@ -13,6 +13,9 @@ ul{
         list-style: none;
     }
 }
+div{
+    background-color: none;
+}
 
 .grid-container{
     display: grid;
@@ -26,12 +29,12 @@ ul{
     }
 }
 .content-spacing{
-    padding: 80px 0;
+    padding-top: 80px;
     @include md{
-        padding: 120px 0;
+        padding-top: 120px 0;
     }
     @include xl{
-        padding: 200px 0;
+        padding-top: 200px 0;
     }
 }
 
