--- a/Portfolio Site/dev/scss/base/_typography.scss
+++ b/Portfolio Site/dev/scss/base/_typography.scss
@@ -16,7 +16,7 @@ h2 {
 	font-family: 'Hepta Slab', serif;
 	font-size: rem-calc(40);
 	font-weight: 400;
-	line-height: rem-calc(51);
+	line-height: rem-calc(60);
 	text-align: center;
 	@include md {
 		font-size: rem-calc(60);
@@ -45,7 +45,7 @@ p {
 	font-weight: 400;
 	line-height: rem-calc(29);
 	margin: 0;
-	padding: 0;
+	padding: 0 5vw;
 	@include md {
 		font-size: rem-calc(20);
 		line-height: rem-calc(40);
