--- a/Portfolio Site/dev/scss/styles.scss
+++ b/Portfolio Site/dev/scss/styles.scss
@@ -19,4 +19,8 @@
 @import "layout/_footer";
 
 // Sections Styles
+@import "sections/_home-content";
 @import "sections/_insta-content";
+@import "sections/_portfolio-content";
+@import "sections/_about-content";
+@import "sections/_contact-content";
