--- a/Portfolio Site/dev/scss/styles.scss
+++ b/Portfolio Site/dev/scss/styles.scss
@@ -1,26 +1,22 @@
 @charset 'utf-8';
-
 // Helpers Styles
 @import "helpers/_mixins";
 @import "helpers/_variables";
-
 // Base Styles
 @import "base/_normalize";
 @import "base/_base";
 @import "base/_typography";
-
 // Components Styles
 @import "components/_buttons";
 @import "components/_forms";
 @import "components/_navigation";
-
 // Layout Styles
 @import "layout/_header";
 @import "layout/_footer";
-
 // Sections Styles
 @import "sections/_home-content";
 @import "sections/_insta-content";
 @import "sections/_portfolio-content";
 @import "sections/_about-content";
 @import "sections/_contact-content";
+@import "sections/_baskerville-content";
