--- a/Portfolio Site/dev/scss/sections/_portfolio-content.scss
+++ b/Portfolio Site/dev/scss/sections/_portfolio-content.scss
@@ -1,6 +1,23 @@
 /* =============
     Portfolio Content
 ============= */
+#category-slides{
+
+    .my-slider{
+
+        div{
+            height: 800px;
+            img{
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                object-position: center;
+            }
+        }
+
+    }
+
+}
 #g1{
     width: 90%;
     height: 90%;
