changed default image sizes to be uniform

--- a/Portfolio Site/deploy/css/styles.css
+++ b/Portfolio Site/deploy/css/styles.css
@@ -808,6 +808,7 @@ li {
 ============= */
 #category-slides .my-slider div {
   height: 800px;
+  width: 100%;
 }
 #category-slides .my-slider div img {
   height: 100%;
