--- a/Portfolio Site/dev/scss/sections/_portfolio-content.scss
+++ b/Portfolio Site/dev/scss/sections/_portfolio-content.scss
@@ -7,6 +7,7 @@
 
         div{
             height: 800px;
+            width: 100%;
             img{
                 height: 100%;
                 width: 100%;
