--- a/Portfolio Site/dev/scss/base/_typography.scss
+++ b/Portfolio Site/dev/scss/base/_typography.scss
@@ -21,6 +21,7 @@ h2 {
 	@include md {
 		font-size: rem-calc(60);
 		line-height: rem-calc(75);
+		text-align: right;
 	}
 	@include xl {
 		font-size: rem-calc(100);
@@ -34,9 +35,11 @@ h3 {
 	font-weight: 400;
 	@include md {
 		font-size: rem-calc(20);
+		line-height: rem-calc(25);
 	}
 	@include xl {
 		font-size: rem-calc(30);
+		line-height: rem-calc(38);
 	}
 }
 p {
