--- a/Portfolio Site/dev/scss/sections/_baskerville-content.scss
+++ b/Portfolio Site/dev/scss/sections/_baskerville-content.scss
@@ -1,3 +1,28 @@
 /* =============
     Baskerville Content
 ============= */
+#baskerville-content{
+    #baskerville-intro{
+
+    }
+    #baskerville-gallery{
+        ul{
+            @include md{
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                //grid-template-rows: 45vh;
+                margin: auto 3vw;
+                gap: 3vw;
+            }
+            
+            img{
+                //width: 41vw;
+                object-fit: cover;
+                object-position: center;
+                height: 100%;
+                width: 100%;
+            }
+        }
+        
+    }
+}
