--- a/Portfolio Site/dev/scss/sections/_portfolio-content.scss
+++ b/Portfolio Site/dev/scss/sections/_portfolio-content.scss
@@ -2,20 +2,21 @@
     Portfolio Content
 ============= */
 #category-slides{
+    >div{
+        .my-slider{
 
-    .my-slider{
-
-        div{
-            height: 800px;
-            width: 50%;
-            img{
-                height: 100%;
-                width: 100%;
-                object-fit: cover;
-                object-position: center;
+            div{
+                height: 900px;
+                //width: 15%;
+                img{
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    object-position: center;
+                }
             }
+    
         }
-
     }
 
 }
