--- a/Portfolio Site/dev/scss/styles.scss
+++ b/Portfolio Site/dev/scss/styles.scss
@@ -10,6 +10,8 @@
 @import "components/_buttons";
 @import "components/_forms";
 @import "components/_navigation";
+@import "components/_tiny-slider";
+
 // Layout Styles
 @import "layout/_header";
 @import "layout/_footer";
