--- a/Portfolio Site/deploy/css/styles.css
+++ b/Portfolio Site/deploy/css/styles.css
@@ -1169,8 +1169,19 @@ li {
 /* =============
     About Content
 ============= */
-#googlemap {
+#googlemap #map {
   grid-area: map;
+  width: 80vw;
+  height: 80vw;
+  background-color: #FF6164;
+  margin-left: 10vw;
+}
+@media (min-width: 768px) {
+  #googlemap #map {
+    width: 100%;
+    height: 30vh;
+    margin: 0px 0 50px;
+  }
 }
 
 #about-heading {
