--- a/Portfolio Site/dev/scss/sections/_about-content.scss
+++ b/Portfolio Site/dev/scss/sections/_about-content.scss
@@ -2,7 +2,20 @@
     About Content
 ============= */
 #googlemap{
-    grid-area: map;
+
+    #map{
+        grid-area: map;
+        width: 80vw;
+        height: 80vw;
+        background-color: $pink;
+        margin-left: 10vw;
+        @include md{
+            width: 100%;
+            height: 30vh;
+            margin: 0px 0 50px;        
+        }
+    }
+    
 }
 #about-heading{
     grid-area: heading;
