--- a/Portfolio Site/dev/scss/sections/_contact-content.scss
+++ b/Portfolio Site/dev/scss/sections/_contact-content.scss
@@ -1,3 +1,80 @@
 /* =============
     Contact Content
 ============= */
+#contact{
+    #contact-form{
+        form{
+            display: grid;
+            gap: 60px;
+            width: 90vw;
+            margin: auto 5vw;
+            @include md{
+                row-gap: 80px;
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-areas: 
+                "name message"
+                "phone message"
+                "email submit";
+            }
+            @include xl{
+                row-gap: 150px;
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-areas: 
+                "name message"
+                "phone message"
+                "email submit";
+            }
+
+            section{
+                max-width: 1180px;
+
+                input{
+                    border: none;
+                    width: 90%;
+                    padding: 5% 5%;
+                    background-color: #F7F5F5;
+                    border-top: 1px solid $medgrey;
+                    border-left: 1px solid $medgrey;
+                }
+
+                textarea{
+                    border: none;
+                    width: 90%;
+                    padding: 5% 5%;
+                    height: 100%;
+                    background-color: #F7F5F5;
+                    border-top: 1px solid $medgrey;
+                    border-left: 1px solid $medgrey;
+                }
+            }
+
+            #name{
+                @include md{
+                    grid-area: name;
+                }
+            }
+            #message{
+                @include md{
+                    grid-area: message;
+                }
+            }
+            #phone{
+                @include md{
+                    grid-area: phone;
+                }
+            }
+            #email{
+                @include md{
+                    grid-area: email;
+                }
+            }
+            #submit{
+                @include md{
+                    grid-area: submit;
+                }
+                background-color: transparent;
+                text-align: center;
+            }
+        }
+    }
+}
