--- a/Portfolio Site/dev/scss/components/_forms.scss
+++ b/Portfolio Site/dev/scss/components/_forms.scss
@@ -2,6 +2,10 @@
     Forms
 ============= */
 
+*:focus{
+    outline: 2px solid $purple;
+}
+
 [type='text'], [type='password'], [type='date'], [type='datetime'], [type='datetime-local'], [type='month'], [type='week'], [type='email'], [type='number'], [type='search'], [type='tel'], [type='time'], [type='url'], [type='color'], textarea{
 	box-shadow: none;
 }
