--- a/Portfolio Site/dev/scss/components/_buttons.scss
+++ b/Portfolio Site/dev/scss/components/_buttons.scss
@@ -1,7 +1,7 @@
 /* =============
     Buttons
 ============= */
-button{
+button {
     padding: 15px 0;
     margin: 2vw;
     width: 50vw;
@@ -10,8 +10,18 @@ button{
     background-color: $lightblue;
     border-color: $lightblue;
     font-family: 'Quicksand', sans-serif;
-	font-size: rem-calc(17);
-	font-weight: 400;
+    font-size: rem-calc(17);
+    font-weight: 400;
     line-height: rem-calc(23);
     color: $black;
+
+    @include md {
+        font-size: rem-calc(20);
+        line-height: rem-calc(40);
+    }
+
+    @include xl {
+        font-size: rem-calc(25);
+        line-height: rem-calc(45);
+    }
 }
